Display list of entered commands.